--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,7 +15,7 @@
 <body>
     <!--Header-->
     <section class="section-outer section-header">
-        <div class="section-linner">
+        <div class="section-inner">
             <div class="section-header-logo"CLOUDBUDGET></div>
             <div class="section-header-content">
                 <div class="section-header-wrapper">
@@ -26,7 +26,7 @@
                     пробной версии за 4,99 €
                     </div>
                         <div class="section-header-wrapper_form-button">
-                            <batton>ПОПРОБОВАТЬ</batton>
+                            <button>ПОПРОБОВАТЬ</button>
                         </div>
                     </div>
                 </div>
